--- a/hrms-client/src/component/forgotPassword/forgotPassword.scss
+++ b/hrms-client/src/component/forgotPassword/forgotPassword.scss
@@ -11,8 +11,6 @@
     margin: 100px auto !important;
 }
 
-
-
 .forget-password {
     display: flex;
     align-items: center;
@@ -79,6 +77,20 @@
 
         .ant-form-item label {
             width: fit-content;
+        }
+    }
+
+    &-button {
+        max-width: 250px;
+        margin-left: auto;
+        text-align: left;
+    }
+
+    &-input {
+        .ant-input {
+            &[type="password"], &[type="text"] {
+                padding: 4px 11px;
+            }
         }
     }
 
