--- a/hrms-client/src/component/events/common/common.scss
+++ b/hrms-client/src/component/events/common/common.scss
@@ -9,21 +9,24 @@
       border: 1px solid #f0f0f0;
       border-radius: 8px;
 
-      .ant-page-header-content {
+      .ant-page-header {
         display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
         gap: 24px;
-      }
 
-      .ant-page-header-heading-title {
-        line-height: 36px;
-        font-size: 28px;
-        margin-bottom: 24px;
-      }
+        &-heading-title {
+          line-height: 36px;
+          font-size: 28px;
+        }
 
-      .ant-page-header-heading {
-        justify-content: center;
+        .ant-page-header-content {
+          display: flex;
+          justify-content: center;
+          flex-wrap: wrap;
+          gap: 24px;
+          padding: unset;
+        }
       }
     }
 
@@ -67,6 +70,12 @@
         color: #389e0d;
       }
     }
+  }
+
+  .no-today-birthday {
+    font-size: 16px;
+    font-weight: 500;
+    color: #1d39c4;
   }
 
   .other-birthday-list {
