--- a/hrms-client/src/component/user/userCreate.scss
+++ b/hrms-client/src/component/user/userCreate.scss
@@ -1,13 +1,7 @@
 .user-create-section {
-  //max-width: 85vw;
-  //margin: 40px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  .user-create-form {
-
-  }
 
   .data-table {
     margin: 32px;
@@ -23,7 +17,11 @@
 
   .ant-form-item {
     .ant-row {
-      align-items: center;
+      //align-items: center;
+    }
+
+    .ant-form-item-label >label {
+      height: 40px;
     }
 
     .ant-form-item-control-input-content {
