--- a/hrms-client/src/component/user/userDataTable.scss
+++ b/hrms-client/src/component/user/userDataTable.scss
@@ -5,7 +5,6 @@
 }
 
 .user-data-table {
-
   .ant-table-content {
     max-height: 450px;
     overflow-x: hidden;
@@ -16,14 +15,6 @@
     position: sticky;
     top: 0;
     z-index: 1;
-  }
-
-  .ant-page-header {
-    //padding: unset;
-
-    .ant-page-header-heading-left {
-      //margin: 0 0 16px 0;
-    }
   }
 }
 
@@ -49,7 +40,7 @@
 ::-webkit-scrollbar {
   width: 4px;
   border-radius: 10px;
-  //background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 ::-webkit-scrollbar-thumb {
