--- a/hrms-client/src/index.css
+++ b/hrms-client/src/index.css
@@ -1,12 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200&display=swap');
+/* ROBOTO */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* Merriweather */
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
+
+/* Remove default margin and Box sizing rules */
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
   font-family: 'Poppins', sans-serif;
+}
+
+*::before,
+*::after {
+   box-sizing: border-box;
 }
 
 body {
@@ -16,27 +26,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  scroll-behavior: smooth;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-body::-webkit-scrollbar {
-  width: 7px;
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-body::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #ffffff;
-  background-image: linear-gradient(135deg, #5FA4E6 25%, #665DCD 40%);
 }
 
 .data-table {
