--- a/hrms-client/src/component/employee/employeeCreate.scss
+++ b/hrms-client/src/component/employee/employeeCreate.scss
@@ -83,12 +83,6 @@ label{
   height: 80px;
   max-height: 80px;
   min-height: 80px;
-
-  //&:last-child{
-  //  height: 0;
-  //  max-height: 0;
-  //  min-height: 0;
-  //}
 }
 
 .ant-form-item-explain-error{
@@ -115,5 +109,19 @@ label{
   label{
     width: 174px;
     display: block;
+  }
+}
+.prev_next{
+  display:flex;
+  gap:30px;
+  justify-content: end;
+  margin-right:80px;
+  margin-top:10px;
+  >button{
+    border:0;
+    padding:0;
+  }
+  .icon{
+    font-size: 33px;
   }
 }
