--- a/hrms-client/src/App.scss
+++ b/hrms-client/src/App.scss
@@ -1,5 +1,6 @@
 @import 'styles/common/00-settings/index.scss';
 @import 'styles/common/01-generic/index.scss';
+@import 'styles/common/02-component/index.scss';
 
 
 .App {
@@ -18,6 +19,22 @@
 
     &.with-background {
       background: $hrms-white-10;
+    }
+
+    .ant-select-multiple {
+      .ant-select-selection-item {
+        &[title="ADMIN"] {
+          @include admin-tag;
+        }
+
+        &[title="HR"] {
+          @include hr-tag;
+        }
+
+        &[title="EMPLOYEE"] {
+          @include employee-tag;
+        }
+      }
     }
   }
 }
@@ -111,6 +128,25 @@
       + span {
         color: #1677ff;
       }
+    }
+  }
+}
+
+
+.ant-select-dropdown {
+  .ant-select-item-option-selected {
+    font-weight: 500 !important;
+
+    &[title="ADMIN"] {
+      @include admin-tag;
+    }
+
+    &[title="HR"] {
+      @include hr-tag;
+    }
+
+    &[title="EMPLOYEE"] {
+      @include employee-tag;
     }
   }
 }
