Dynamic Enum create page creation

--- a/hrms-client/src/styles/common/00-settings/colors.scss
+++ b/hrms-client/src/styles/common/00-settings/colors.scss
@@ -51,7 +51,7 @@ $hrms-purple-10: #665DCD;
 $hrms-green-10: #f6ffed;
 $hrms-green-20: #D0EBE1;
 $hrms-green-30: #C8F1D4;
-$hrms-green-40: #B7EB8F;
+$hrms-green-40: #B9DBCF;
 $hrms-green-50: #29F499;
 $hrms-green-60: #389E0D;
 
@@ -84,6 +84,7 @@ $hrms-color-60: #FADFDA;
 $hrms-color-70: #5FBEA0;
 $hrms-color-80: #FF9902;
 $hrms-color-90: #E196FF;
+$hrms-color-100: #FFE082;
 
 
 
