--- a/hrms-client/src/styles/common/00-settings/fonts.scss
+++ b/hrms-client/src/styles/common/00-settings/fonts.scss
@@ -23,8 +23,9 @@ $hrms-title-font-size-xl: 100px;
 // LINE HEIGHTS
 $hrms-line-height-xs: 16px;
 $hrms-line-height-s: 18px;
-$hrms-line-height-m: 24px;
-$hrms-line-height-sm: 28px;
+$hrms-line-height-m: 20px;
+$hrms-line-height-sm: 24px;
+$hrms-line-height-ml: 28px;
 $hrms-line-height-l: 32px;
 $hrms-line-height-lm: 36px;
 $hrms-line-height-lx: 40px;
