--- a/hrms-client/src/component/user/user-create/userCreate.scss
+++ b/hrms-client/src/component/user/user-create/userCreate.scss
@@ -1,4 +1,4 @@
-@import "../../styles/common/00-settings/index";
+@import "../../../styles/common/00-settings/index";
 
 .user-create-section {
   display: flex;
