--- a/hrms-client/src/styles/common/02-component/tags.scss
+++ b/hrms-client/src/styles/common/02-component/tags.scss
@@ -1,7 +1,8 @@
 @mixin common-tag-design {
   padding: 2px 12px;
-  font-size: 12px;
-  font-weight: 500;
+  font-size: $hrms-font-size-xs;
+  line-height: $hrms-line-height-m;
+  font-weight: $hrms-font-weight-500;
   border: 1px solid;
 }
 
