Employee details and footer section refined

--- a/hrms-client/src/component/employee/employeeDetail/employeeDetail.scss
+++ b/hrms-client/src/component/employee/employeeDetail/employeeDetail.scss
@@ -2,7 +2,7 @@
 
 .ant-layout-content {
     line-height: unset !important;
-    min-height: unset !important;
+    //min-height: unset !important;
 }
 
 .employee-detail-container {
