--- a/hrms-client/src/component/footer/footer.scss
+++ b/hrms-client/src/component/footer/footer.scss
@@ -10,7 +10,7 @@ footer {
     font-weight: 500;
     text-align: center;
     background: $hrms-blue-80;
-    padding: 60px 60px 20px;
+    padding: 60px 60px 40px;
   }
 
   .footer-container {
@@ -18,7 +18,7 @@ footer {
 
     &__upper {
       @include flex-row-space-between;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
 
     &__bottom {
@@ -26,7 +26,7 @@ footer {
       justify-content: space-between;
       width: 100%;
       border-top: 1px solid white;
-      padding-top: 20px;
+      padding-top: 30px;
     }
 
     &__logo {
@@ -36,12 +36,215 @@ footer {
 
     &__links {
       @include flex-row-space-between;
-      gap: 20px;
+      gap: 60px;
 
-      .company, .support, .contact {
-        border: 1px solid white;
-        height: 200px;
-        width: 100px;
+      .links-section {
+        @include flex-col-align-start;
+        gap: 10px;
+
+        &__title {
+          margin-bottom: 10px;
+        }
+
+        &.contact {
+          text-align: left;
+          max-width: 292px;
+
+          .mail-support, .contact-support {
+            display: flex;
+            align-items: center;
+
+            & >a {
+              display: unset;
+              margin-left: 12px;
+              font-size: 16px;
+              font-weight: 400;
+              color: #fff;
+            }
+          }
+
+          .address {
+            margin-top: 20px;
+            font-size: 16px;
+            font-weight: 400;
+            color: #fff;
+          }
+          
+          .credits {
+            font-size: 16px;
+            font-weight: 400;
+            color: #fff;
+          }
+        }
+      }
+
+      a {
+        --primary-color: #ffffff;
+        --hovered-color: #ffffff;
+        position: relative;
+        display: flex;
+        font-size: 16px;
+        font-weight: 400;
+        gap: 0.5rem;
+        align-items: center;
+      }
+
+      a p {
+        margin: 0;
+        position: relative;
+        color: var(--primary-color);
+      }
+
+      a::after {
+        position: absolute;
+        content: "";
+        width: 0;
+        left: 0;
+        bottom: -2px;
+        background: var(--hovered-color);
+        height: 2px;
+        transition: 0.3s ease-out;
+      }
+
+      //a p::before {
+      //  position: absolute;
+      //  /*   box-sizing: border-box; */
+      //  content: "";
+      //  width: 0%;
+      //  inset: 0;
+      //  color: var(--hovered-color);
+      //  overflow: hidden;
+      //  transition: 0.3s ease-out;
+      //}
+
+      a:hover::after {
+        width: 100%;
+      }
+
+      //a:hover p::before {
+      //  width: 100%;
+      //}
+
+      a:hover svg {
+        transform: translateX(4px);
+        color: var(--hovered-color);
+        opacity: 1;
+      }
+
+      a svg {
+        color: var(--primary-color);
+        transition: 0.2s;
+        position: relative;
+        width: 15px;
+        transition-delay: 0.2s;
+        opacity: 0;
+      }
+
+    }
+  }
+
+  .follow-us {
+    @include flex-row-align-center;
+    gap: 40px;
+
+    .wrapper {
+      @include flex-row;
+      gap: 16px;
+
+      .icon {
+        position: relative;
+        background: #fff;
+        border-radius: 50%;
+        padding: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        //transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        transition: all 0.3s ease-out;
+
+        &:hover {
+          .tooltip {
+            top: -45px;
+            opacity: 1;
+            visibility: visible;
+            pointer-events: auto;
+          }
+
+          svg {
+            fill: #fff;
+          }
+        }
+      }
+
+      .tooltip {
+        position: absolute;
+        top: 0;
+        font-size: 14px;
+        background: #fff;
+        color: #fff;
+        padding: 5px 8px;
+        border-radius: 5px;
+        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+        opacity: 0;
+        pointer-events: none;
+        transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+        &:before {
+          position: absolute;
+          content: "";
+          height: 8px;
+          width: 8px;
+          background: #fff;
+          bottom: -3px;
+          left: 50%;
+          transform: translate(-50%) rotate(45deg);
+          transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        }
+      }
+
+      .facebook {
+        svg {
+          fill: #1877F2;
+        }
+
+        &:hover,
+        &:hover .tooltip,
+        &:hover .tooltip::before {
+          background: #1877F2;
+          color: #fff;
+        }
+      }
+
+      .twitter {
+        svg {
+          fill: #1DA1F2;
+        }
+
+        &:hover,
+        &:hover .tooltip,
+        &:hover .tooltip::before {
+          background: #1DA1F2;
+          color: #fff;
+        }
+      }
+
+      .instagram {
+        svg {
+          fill: #E4405F;
+        }
+
+        &:hover {
+          background: linear-gradient(115deg, #f9ce34, #ee2a7b, #6228d7);
+        }
+
+        &:hover .tooltip,
+        &:hover .tooltip::before {
+          background: #EE2A7B;
+          color: #fff;
+        }
       }
     }
   }
