--- a/hrms-client/src/styles/common/01-generic/button.scss
+++ b/hrms-client/src/styles/common/01-generic/button.scss
@@ -1,3 +1,109 @@
+// HRMS LINKS WITH ANIMATION -->
+@mixin hrms-link-white {
+  a {
+    --primary-color: #ffffff;
+    --hovered-color: #ffffff;
+    position: relative;
+    display: flex;
+    font-size: 16px;
+    font-weight: 400;
+    gap: 0.5rem;
+    align-items: center;
+  }
+
+  a p {
+    margin: 0;
+    position: relative;
+    color: var(--primary-color);
+  }
+
+  a::after {
+    position: absolute;
+    content: "";
+    width: 0;
+    left: 0;
+    bottom: -2px;
+    background: var(--hovered-color);
+    height: 2px;
+    transition: 0.3s ease-out;
+  }
+
+  a:hover::after {
+    width: 100%;
+  }
+
+  a:hover svg {
+    transform: translateX(4px);
+    color: var(--hovered-color);
+    opacity: 1;
+  }
+
+  a svg {
+    color: var(--primary-color);
+    transition: 0.2s;
+    position: relative;
+    width: 15px;
+    transition-delay: 0.2s;
+    opacity: 0;
+  }
+}
+
+
+@mixin hrms-link-blue__primary {
+  .hrms-link {
+    --primary-color: #0077ff;
+    --hovered-color: #0077ff;
+    position: relative;
+    display: flex;
+    font-size: 16px;
+    font-weight: 400;
+    gap: 0.5rem;
+    align-items: center;
+    max-width: fit-content;
+
+    &__text {
+      margin: 0;
+      position: relative;
+      color: var(--primary-color);
+    }
+
+    svg {
+      color: var(--primary-color);
+      transition: 0.2s;
+      position: relative;
+      width: 15px;
+      transition-delay: 0.2s;
+      opacity: 0;
+    }
+
+    &::after {
+      position: absolute;
+      content: "";
+      width: 0;
+      left: 0;
+      bottom: -2px;
+      background: var(--hovered-color);
+      height: 2px;
+      transition: 0.3s ease-out;
+    }
+
+    &:hover {
+      svg {
+        transform: translateX(4px);
+        color: var(--hovered-color);
+        opacity: 1;
+      }
+
+      &:after {
+        width: 100%;
+      }
+    }
+  }
+}
+
+
+
+// HRMS BUTTONS WITH ANIMATION -->
 @mixin login-button() {
   @include nunito-sans-regular();
   align-items: center;
@@ -34,5 +140,44 @@
   @media screen and (max-width: $hrms-breakpoint-l) {
     @include nunito-sans-regular();
     padding: 8px 16px;
+  }
+}
+
+
+@mixin hrms-button-blue__primary {
+  --primary-color: #0077ff;
+  --hovered-color: #1F6CF9;
+
+  padding: 12px 24px;
+  border-radius: 4px;
+  color: $hrms-white;
+  height: unset;
+  box-shadow: unset;
+  border: 1px solid var(--primary-color);
+  background-color: var(--primary-color);
+  transition: all ease-out 0.3s;
+
+  @keyframes button-loading {
+    0% {
+      background-position: 100% 50%;
+    }
+
+    100% {
+      background-position: 0 50%;
+    }
+  }
+
+  &:not(.ant-btn-disabled):hover {
+    color: $hrms-white;
+    border: 1px solid var(--hovered-color);
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.10) 25%,
+            rgba(255, 255, 255, 0.30) 30%,
+            rgba(255, 255, 255, 0.10) 60%);
+    background-color: var(--hovered-color);
+    background-size: 400% 100%;
+    animation-name: button-loading;
+    animation-duration: 1.8s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
   }
 }
