--- a/hrms-client/src/component/employee/employeeSearch.scss
+++ b/hrms-client/src/component/employee/employeeSearch.scss
@@ -28,7 +28,7 @@
         background-color: #fafafa;
         min-height: 200px;
         text-align: center;
-        padding-top: 40px;
+        //padding-top: 40px;
     }
 
     hr {
