Holiday create page and User Login Card fixes

--- a/hrms-client/src/component/navbar/navbar.scss
+++ b/hrms-client/src/component/navbar/navbar.scss
@@ -31,5 +31,19 @@
         }
       }
     }
+
+    &.navigation-menu {
+      .ant-menu-submenu {
+        .ant-menu-submenu-title {
+          color: #ffffff;
+        }
+
+        //&-open, &-active, &-selected, {
+        //  .ant-menu-submenu-title {
+        //    color: #ffffff;
+        //  }
+        //}
+      }
+    }
   }
 }
