--- a/hrms-client/src/component/layoutComponent/layoutComponent.scss
+++ b/hrms-client/src/component/layoutComponent/layoutComponent.scss
@@ -21,6 +21,7 @@
     cursor: pointer;
     box-shadow: 0 4px 12px 0 $hrms-gray-50;
     transition: all 0.3s ease-out;
+    z-index: 5;
 
     .progress-value {
       height: calc(100% - 12px);
