--- a/hrms-client/src/component/holiday/holiday.scss
+++ b/hrms-client/src/component/holiday/holiday.scss
@@ -8,4 +8,30 @@
       }
     }
   }
+
+  &__form {
+    >.ant-col {
+      max-width: 33%;
+      display: flex;
+      flex-direction: column;
+      row-gap: 10px;
+    }
+
+    .ant-form-item {
+      .ant-form-item-label {
+        max-width: 40%;
+      }
+    }
+
+    &-submit {
+      width: 100%;
+      text-align: right;
+      max-width: 97%;
+      margin-top: 20px;
+
+      button[type="submit"] {
+
+      }
+    }
+  }
 }
