add index for import all componant and fix employee detail page and add calendar vaiw and list view of holiday

--- a/hrms-client/src/component/employee/employeeDetail/employeeDetail.scss
+++ b/hrms-client/src/component/employee/employeeDetail/employeeDetail.scss
@@ -114,14 +114,12 @@
     flex-direction: column;
     justify-content: space-around;
     padding: 10px;
-    border: 2px;
-    border-style: ridge;
+    // border: 2px;
+    // border-style: ridge;
 
     span {
         padding: 5px;
     }
-
-
 }
 
 // .previous-experience-detail-container {}
@@ -145,8 +143,6 @@
     flex-direction: column;
     justify-content: space-around;
     padding: 10px;
-    border: 2px;
-    border-style: ridge;
 
     span {
         padding: 5px;
